// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateAllMemberships matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation {
    
    alias123: updateMembership(groupId: 123, data: {settings: {sendEmail:true}}) {
      id
    }
  ,
    alias456: updateMembership(groupId: 456, data: {settings: {sendEmail:true}}) {
      id
    }
  
  }",
  },
  "meta": Object {
    "optimistic": true,
    "settings": Object {
      "sendEmail": true,
    },
  },
  "type": "NotificationSettings/UPDATE_ALL_MEMBERSHIP_SETTINGS",
}
`;

exports[`updateMembershipSettings matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($groupId: ID, $data: MembershipInput) {
        updateMembership(groupId: $groupId, data: $data) {
          id
        }
      }",
    "variables": Object {
      "data": Object {
        "settings": Object {
          "sendEmail": true,
        },
      },
      "groupId": 123,
    },
  },
  "meta": Object {
    "groupId": 123,
    "optimistic": true,
    "settings": Object {
      "sendEmail": true,
    },
  },
  "type": "NotificationSettings/UPDATE_MEMBERSHIP_SETTINGS",
}
`;
